--- a/AEs/autoencoders_pytorch.ipynb
+++ b/AEs/autoencoders_pytorch.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -224,6 +226,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -275,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "score = evaluate(X_test)\n",
@@ -359,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Check autoencoder shapes along different code_sizes\n",
@@ -429,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for epoch in range(50):\n",
@@ -450,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reconstruction_mse = evaluate(X_test)\n",
@@ -476,6 +487,39 @@
     "* Сложность архитектуры. Если у вас уже, например, 152 слоя, и вы всё ещё не проходите проверку, начните с чего-то более простого и постепенно усложняйте архитекруру.\n",
     "\n",
     "* Архитектура. Вы можете использовать любую комбинацию слоёв (включая свёрточные, нормализационные и так далее) до тех пор, пока __выходной слой энкодера содержит только 32 числа на обучающий пример__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Арифметика скрытого представления"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for _ in range(5):\n",
+    "    image1,image2 = X_test[np.random.randint(0,len(X_test),size=2)]\n",
+    "    code1, code2 = encoder(Variable(torch.from_numpy(np.stack([image1,image2])))).data.numpy()\n",
+    "\n",
+    "    plt.figure(figsize=[10,4])\n",
+    "    for i,a in enumerate(np.linspace(0,1,num=7)):\n",
+    "\n",
+    "        output_code = code1*(1-a) + code2*(a)\n",
+    "        output_code = Variable(torch.from_numpy(output_code[None]))\n",
+    "        output_image = decoder(output_code).data.numpy()[0]\n",
+    "\n",
+    "        plt.subplot(1,7,i+1)\n",
+    "        plt.imshow(output_image)\n",
+    "        plt.title(\"a=%.2f\"%a)\n",
+    "        \n",
+    "    plt.show()"
    ]
   },
   {
@@ -527,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.subplot(1,4,1)\n",
@@ -568,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for epoch in range(50):\n",
@@ -602,7 +650,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "denoising_mse = evaluate(X_test)\n",
@@ -707,7 +757,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#smiles\n",
@@ -717,7 +769,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ethnicity\n",
@@ -727,7 +781,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#glasses\n",
@@ -740,43 +796,19 @@
     "collapsed": true
    },
    "source": [
-    "## Бонус: простое преобразование изображений\n"
+    "Есть и много других применений автоэнкодеров.\n",
+    "\n",
+    "Тем не менее, они не совсем подходят для генерации изображений. Для этого лучше использовать генеративно-состязательные сети."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(5):\n",
-    "    image1,image2 = X_test[np.random.randint(0,len(X_test),size=2)]\n",
-    "    code1, code2 = encoder(Variable(torch.from_numpy(np.stack([image1,image2])))).data.numpy()\n",
-    "\n",
-    "    plt.figure(figsize=[10,4])\n",
-    "    for i,a in enumerate(np.linspace(0,1,num=7)):\n",
-    "\n",
-    "        output_code = code1*(1-a) + code2*(a)\n",
-    "        output_code = Variable(torch.from_numpy(output_code[None]))\n",
-    "        output_image = decoder(output_code).data.numpy()[0]\n",
-    "\n",
-    "        plt.subplot(1,7,i+1)\n",
-    "        plt.imshow(output_image)\n",
-    "        plt.title(\"a=%.2f\"%a)\n",
-    "        \n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "Есть и много других применений автоэнкодеров.\n",
-    "\n",
-    "Тем не менее, они не совсем подходят для генерации изображений. Для этого лучше использовать генеративно-состязательные сети."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
